tests/fail/semantic/duplicated_atom_field.cyt
atom Test(a: int, a: int)

atom Test2(
    x: int,
    x: int,
)

// args: --no-colour

// expected stderr:
// error: duplicated atom field `a` in atom `Test`
//   ┌─ ../tests/fail/semantic/duplicated_atom_field.cyt:1:19
//   │
// 1 │ atom Test(a: int, a: int)
//   │           -       ^ duplicate field
//   │           │        
//   │           first occurance of field name
// 
// error: duplicated atom field `x` in atom `Test2`
//   ┌─ ../tests/fail/semantic/duplicated_atom_field.cyt:5:5
//   │
// 4 │     x: int,
//   │     - first occurance of field name
// 5 │     x: int,
//   │     ^ duplicate field
